fix(review): add todo and replace margins in general

--- a/Card con lado inclinado/index.html
+++ b/Card con lado inclinado/index.html
@@ -9,20 +9,16 @@
 <body>
     <div class="card">
       <div class="contenedor">
-        <img src="imagenes/car.webp" alt="Imagen">
+        <img src="imagenes/car.we" alt="Imagen">
         <div class="divConBorde"></div>
       </div>
         
       <div class="informacion">
-        <h1>Autazoo pa</h1>
+        <h2>Autazo Audi pa</h2>
         <p>definicion increible por la que este autazo es un autazo paaaa, lastima que el fondo del auto no es un color mate, por eso quedo mal</p>
         <p>¿que espera? ¡Cómpra barato!</p>
         <button>Más info.</button>
       </div>
-  
     </div>
-      
-  
-  
 </body>
 </html>
