--- a/Card social/index.html
+++ b/Card social/index.html
@@ -10,9 +10,8 @@
 <body>
   <div>
     <div class="card">
-      <img src="imagenes/eunha.jpg" alt="Imagen">
-
-      <div class="iconbar">
+      <img src="imagenes/eunha.jpg" alt="Imagen"> // TODO: background era un chiste
+      <div class="iconbar"> // TODO: Add hover
         <span>
           <i class="fa-brands fa-facebook"></i>
         </span>
@@ -28,7 +27,6 @@
         <span>
           <i class="fa-brands fa-line"></i>
         </span>
-        
       </div>
       <div class="pie">
         <p>Jung Eun-bi</p>
