--- a/Ficha de producto 3D/index.html
+++ b/Ficha de producto 3D/index.html
@@ -12,10 +12,9 @@
     <div class="rotado primer-rotacion"></div>
     <div class="rotado segunda-rotacion"></div>
     <div class="img">
-      <div class="precio"><div class="interior">800$</div></div>
+      <div class="precio"><p class="">800$</p></div>
       <img src="imagenes/ficha.webp" alt="Imagen">
     </div>
-    
   </div>
 </body>
 </html>
