--- a/Tarjeta horizontal/index.html
+++ b/Tarjeta horizontal/index.html
@@ -10,7 +10,7 @@
   <div class="tarjeta">
     <div class="informacion">
       <h1>Gilda Badillo Esparza</h1>
-      <p>jefa <b>SUPER IMPORTANTE</b> de algun lugar, probablemente si tocas el boton de mas info tengas mas info</p>
+      <p>jefa <b>SUPER IMPORTANTE</b> de algun lugar, probablemente si tocas el boton de mas info tengas mas info</p> //TODO: remove margins and change <b> 
       <div class="contenedor-botones">
         <button class="masinformacion">Mas info.</button>
         <button class="contactar">Contactar</button>
