--- a/Tarjeta ID/index.html
+++ b/Tarjeta ID/index.html
@@ -7,6 +7,7 @@
   <title>Tarjeta ID</title>
 </head>
 <body>
+  // TODO: fix margins
   <div class="borde">
     <div class="id">
 
@@ -30,7 +31,6 @@
               <p class="fecha">Año</p>
               <p class="numero">24</p>
           </div>
-                      
         </div>
       </div>
   
